=== HEAD

* Fix Database#rename_table on Microsoft SQL Server (rohit.namjoshi) (#293)

* Add Dataset#provides_accurate_rows_matched?, for seeing if update and delete are likely to return correct numbers (jeremyevans)

* Add require_modification to Sequel::Model, for checking that model instance updating and deleting affects a single row (jeremyevans)

* Fix leak of ResultSets when getting metadata in the jdbc adapter (jrun)

* Make Dataset#filter and related methods just clone receiver if given an empty argument, such as {}, [], or '' (jeremyevans)

* Add instance_filters plugin, for adding arbitrary filters when updating/destroying the instance (jeremyevans)

* No longer create the #{plugin}_opts methods for plugins (jeremyevans)

* Support :auto_vacuum, :foreign_keys, :synchronous, and :temp_store Database options on SQLite, for thread-safe PRAGMA setting (jeremyevans)

* Add foreign_keys accessor to SQLite Database objects (enabled by default), which modifies the foreign_keys PRAGMA available in 3.6.19+ (jeremyevans)

* Add an Database#sqlite_version method when connecting to SQLite, used to determine feature support (jeremyevans)

* Fix rolling back transactions when connecting to Oracle via JDBC (jeremyevans)

* Fix syntax errors when connecting to MSSQL via the dbi adapter (jeremyevans) (#292)

* Add support for an :after_connect option when connection, called with each new connection made (jeremyevans)

* Add support for a :test option when connecting to be automatically test the connection (jeremyevans)

* Add Dataset#select_append, which always appends to the existing SELECTed columns (jeremyevans)

* Emulate DISTINCT ON on MySQL using GROUP BY (jeremyevans)

* Make MSSQL shared adapter emulate set_column_null alter table op better with types containing sizes (jeremyevans) (#291)

* Add :config_default_group and :config_local_infile options to the native MySQL adapter (jeremyevans)
