@@ -1,5 +1,7 @@
 === HEAD
 
+* Consider number/numeric/decimal columns with a 0 scale to be integer columns (e.g. numeric(10, 0)) (jeremyevans, QaDes)
+
 * Fix Database#rename_table on Microsoft SQL Server (rohit.namjoshi) (#293)
 
 * Add Dataset#provides_accurate_rows_matched?, for seeing if update and delete are likely to return correct numbers (jeremyevans)
